--- a/index.html
+++ b/index.html
@@ -4,21 +4,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>A&K Development Group Holdings LLC - Your Home Solution | Home Improvement Services</title>
+  <title>Soluvias - Seguridad Vial e Infraestructura | República Dominicana</title>
   <meta name="description"
-    content="Professional home improvement services in Boston, MA. Kitchen remodeling, bathroom renovation, window replacement, painting, and junk removal. Call (407) 655-8012" />
-  <meta name="author" content="A&K Development Group Holdings LLC" />
+    content="Especialistas en señalización vertical, barandas metálicas certificadas, pintura termoplástica y dispositivos de seguridad vial en República Dominicana. Teléfono: (809) 922-0002" />
+  <meta name="author" content="Soluvias" />
 
-  <meta property="og:title" content="A&K Development Group Holdings LLC - Your Home Solution" />
+  <meta property="og:title" content="Soluvias - Seguridad Vial e Infraestructura" />
   <meta property="og:description"
-    content="Professional home improvement services in Boston, MA. Kitchen remodeling, bathroom renovation, window replacement, painting, and junk removal." />
+    content="Especialistas en señalización vertical, barandas metálicas certificadas, pintura termoplástica y dispositivos de seguridad vial en República Dominicana." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://ankdevelopments.pages.dev/" />
-  <meta property="og:site_name" content="A&K Development Group Holdings LLC" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="A&K Development Group Holdings LLC - Your Home Solution" />
-  <meta name="twitter:description"
-    content="Professional home improvement services in Boston, MA. Kitchen remodeling, bathroom renovation, window replacement, painting, and junk removal." />
   <link rel="icon" type="image/jpg" href="/images/Logo.jpg" />
 </head>
 
